3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Add cf_object_set_float_property.
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
---
Add SpeedLeft to Python plugin. Fix wrong type for speed.
 plugins/cfpython/include/cfpython_object_private.h
 plugins/cfpython/cfpython_object.c
---
Fix wrong type for speed.
 server/plugins.c
Ryo 2007-02-28

plugins/cfpython/cfpython.c: fix crash when Python and server are compiled with
 different versions of MS's DLLs.
Ryo 2007-02-24

Fix uninitialized variables (merge from trunk).
 server/weather.c: wrong temperature initialisation.
Ryo 2007-02-18


Fix mishandling of weapon/shield/armour restriction. Fix crash with NULL value.
(merge from trunk)
 server/gods.c
Ryo 2007-02-18

New server settings: allow_denied_spells_writing, for inscription.
 common/init.c
 include/global.h
 server/init.c skills.c
Ryo 2007-02-15

server/shop.c: handle "no money" case when player tries to exit shop.
---
Fix a crash with object handling by plugins.
 cfpython/cfpython_map.c: don't assume op exists after inserting in map.
 Ryo 2007-02-15

Make armour handling coherent between gods, monsters and such.
Cloaks and bracers are not armour. Merge from trunk.
 common/item.c utils.c: fix tests with macros.
 include/define.h: update macro, new IS_SHIELD.
 server/apply.c monster.c player.c: use macros.
Ryo 2007-02-15

Invalidate player's view if teleporting. Call update_ob_speed when changing speed.
 server/plugins.c
Ryo 2007-02-12

lib/smooth updated in conjunction with arch update (revision 5421).
Kevin Bulgrien 2007-02-11

Fix a few compiler warnings.  Most were just unused variables, but