@@ -17,6 +17,10 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+server/plugins.c: don't remove/free removed/freed objects, log mistake. This closes
+ bug #1670465: server doesn't have check to see if it is removing removed
+Ryo 2007-03-04
+
 Add cf_object_set_float_property.
  plugins/common/include/plugin_common.h
  plugins/common/plugin_common.c
